--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,9 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  
+
 }
 
 .main {
@@ -61,8 +65,7 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
